2011-03-27  Paul Eggert  <eggert@cs.ucla.edu>

	* keyboard.c (parse_modifiers_uncached, parse_modifiers):
	Don't assume string length fits in int.

	* callproc.c (Fcall_process, Fcall_process_region): Use SAFE_ALLOCA
	instead of alloca (Bug#8344).

	* eval.c (Fbacktrace): Don't assume nargs fits in int.
	(Fbacktrace_frame): Don't assume nframes fits in int.

	* syntax.c (scan_sexps_forward): Avoid pointer wraparound.

	* xterm.c (x_make_frame_visible, same_x_server): Redo to avoid overflow
	concerns.

	* term.c (produce_glyphless_glyph): Remove unnecessary test.

	* cm.c (calccost): Turn while-do into do-while, for clarity.

	* keyboard.c (syms_of_keyboard): Use the same style as later
	in this function when indexing through an array.  This also
	works around GCC bug 48267.

	* image.c (tiff_load): Fix off-by-one image count (Bug#8336).

	* xselect.c (x_check_property_data): Return correct size (Bug#8335).

	* chartab.c (sub_char_table_ref_and_range): Redo for slight
	efficiency gain, and to bypass a gcc -Wstrict-overflow warning.

	* keyboard.c, keyboard.h (num_input_events): Now size_t.
	This avoids undefined behavior on integer overflow, and is a bit
	more convenient anyway since it is compared to a size_t variable.

	Variadic C functions now count arguments with size_t, not int.
	This avoids an unnecessary limitation on 64-bit machines, which
	caused (substring ...) to crash on large vectors (Bug#8344).
	* lisp.h (struct Lisp_Subr.function.aMANY): Now takes size_t, not int.
	(DEFUN_ARGS_MANY, internal_condition_case_n, safe_call): Likewise.
	All variadic functions changed accordingly.
	(struct gcpro.nvars): Now size_t, not int.  All uses changed.
	* data.c (arith_driver, float_arith_driver): Likewise.
	* editfns.c (general_insert_function): Likewise.
	* eval.c (struct backtrace.nargs, interactive_p)
	(internal_condition_case_n, run_hook_with_args, apply_lambda)
	(funcall_lambda, mark_backtrace): Likewise.
	* fns.c (concat): Likewise.