@@ -2,6 +2,7 @@
 
 	* keyboard.c (parse_modifiers_uncached, parse_modifiers):
 	Don't assume string length fits in int.
+	(keyremap_step, read_key_sequence): Use size_t for sizes.
 
 	* callproc.c (Fcall_process, Fcall_process_region): Use SAFE_ALLOCA
 	instead of alloca (Bug#8344).
